--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Clinical Trials Resource Hub
 theme: minima
 description: Training and protocol development resources for therapeutic clinical trials.
-nav:
-  - Home: index.md
-  - Therapeutic Trials Overview: therapeutic-overview.md
-  - Protocol Guide: protocol-guide.md
-  - Training Resources: training-resources.md
+
+# Enable site headers & footer links
+markdown: kramdown
